fix: update package dependencies

--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -103,6 +103,7 @@
         "@svgr/webpack",
         "@types/webpack-env",
         "babel-plugin-lodash",
+        "chalk",
         "raw-loader",
         "node-sass"
       ]
