--- a/sample-project/api/apolloGateway/package.json
+++ b/sample-project/api/apolloGateway/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@webiny/handler": "^4.0.0-beta.0",
-    "@webiny/handler-apollo-gateway": "^4.0.0-beta.0"
+    "@webiny/handler-apollo-gateway": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
