--- a/sample-project/api/cms/content/package.json
+++ b/sample-project/api/cms/content/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "@webiny/handler": "^4.0.0-beta.0",
     "@webiny/api-headless-cms": "^4.0.0-beta.0",
-    "@webiny/api-settings-manager": "^4.0.0-beta.0"
+    "@webiny/api-settings-manager": "^4.0.0-beta.0",
+    "@webiny/api-security": "^4.0.0-beta.0",
+    "@webiny/api-i18n": "^4.0.0-beta.0",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
