--- a/sample-project/api/files/graphql/package.json
+++ b/sample-project/api/files/graphql/package.json
@@ -11,6 +11,7 @@
     "@webiny/api-security": "^4.0.0-beta.0",
     "@webiny/api-settings-manager": "^4.0.0-beta.0",
     "@webiny/api-files": "^4.0.0-beta.0",
-    "@webiny/api-plugin-files-resolvers-mongodb": "^4.0.0-beta.0"
+    "@webiny/api-plugin-files-resolvers-mongodb": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
