--- a/sample-project/api/formBuilder/package.json
+++ b/sample-project/api/formBuilder/package.json
@@ -11,6 +11,7 @@
     "@webiny/api-security": "^4.0.0-beta.0",
     "@webiny/api-settings-manager": "^4.0.0-beta.0",
     "@webiny/api-i18n": "^4.0.0-beta.0",
-    "@webiny/api-form-builder": "^4.0.0-beta.0"
+    "@webiny/api-form-builder": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
