--- a/sample-project/api/pageBuilder/package.json
+++ b/sample-project/api/pageBuilder/package.json
@@ -10,7 +10,11 @@
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
     "@webiny/api-settings-manager": "^4.0.0-beta.0",
     "@webiny/api-security": "^4.0.0-beta.0",
-    "@webiny/api-i18n": "^4.0.0-beta.0",
-    "@webiny/api-page-builder": "^4.0.0-beta.0"
+    "@webiny/api-google-tag-manager": "^4.0.0-beta.0",
+    "@webiny/api-cookie-policy": "^4.0.0-beta.0",
+    "@webiny/api-mailchimp": "^4.0.0-beta.0",
+    "@webiny/api-plugin-page-builder-resolvers-mongodb": "^4.0.0-beta.0",
+    "@webiny/api-page-builder": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
