--- a/sample-project/api/security/validateAccessToken/package.json
+++ b/sample-project/api/security/validateAccessToken/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-validate-access-token",
+  "name": "api-security-validate-access-token",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
@@ -7,6 +7,7 @@
   "dependencies": {
     "@webiny/handler": "^4.0.0-beta.0",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
-    "@webiny/api-security": "^4.0.0-beta.0"
+    "@webiny/api-security": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
