--- a/packages/cwp-template-cms/template/api/databaseProxy/package.json
+++ b/packages/cwp-template-cms/template/api/databaseProxy/package.json
@@ -5,7 +5,8 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.1",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1"
+    "@webiny/handler": "^4.0.0-beta.0",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
