--- a/packages/cwp-template-cms/template/api/security/validateAccessToken/package.json
+++ b/packages/cwp-template-cms/template/api/security/validateAccessToken/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "api-validate-access-token",
+  "name": "api-security-validate-access-token",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.1",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
-    "@webiny/api-security": "^4.0.0-beta.1"
+    "@webiny/handler": "^4.0.0-beta.0",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
+    "@webiny/api-security": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
