--- a/packages/cwp-template-full/template/api/cms/dataManager/package.json
+++ b/packages/cwp-template-full/template/api/cms/dataManager/package.json
@@ -5,10 +5,10 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/graphql": "^4.0.0-beta.1",
-    "@webiny/handler": "^4.0.0-beta.1",
-    "@webiny/api-headless-cms": "^4.0.0-beta.1",
-    "@webiny/api-i18n": "^4.0.0-beta.1",
-    "@webiny/api-plugin-commodo-mongodb": "^4.0.0-beta.1"
+    "@webiny/handler": "^4.0.0-beta.0",
+    "@webiny/api-headless-cms": "^4.0.0-beta.0",
+    "@webiny/api-i18n": "^4.0.0-beta.0",
+    "@webiny/api-plugin-commodo-mongodb": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
