refactor: 📦  Add plugin logic for page builder welcome widget

--- a/packages/app-admin/tsconfig.json
+++ b/packages/app-admin/tsconfig.json
@@ -4,6 +4,7 @@
   "references": [
     { "path": "../ui" },
     { "path": "../app" },
+    { "path": "../app-security" },
     { "path": "../plugins" },
     { "path": "../react-router" },
     { "path": "../form" }
