--- a/packages/app-admin/package.json
+++ b/packages/app-admin/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^10.0.17",
     "@svgr/webpack": "^4.3.2",
     "@webiny/app": "^4.0.0-beta.2",
+    "@webiny/app-security": "^4.0.0-beta.2",
     "@webiny/form": "^4.0.0-beta.1",
     "@webiny/plugins": "^4.0.0-beta.1",
     "@webiny/react-router": "^4.0.0-beta.1",
