--- a/packages/app-admin/tsconfig.build.json
+++ b/packages/app-admin/tsconfig.build.json
@@ -6,6 +6,7 @@
     "**/__tests__/**",
     "./dist",
     "../app",
+    "../app-security",
     "../form",
     "../plugins",
     "../react-router",
@@ -19,6 +20,7 @@
   "references": [
     { "path": "../ui/tsconfig.build.json" },
     { "path": "../app/tsconfig.build.json" },
+    { "path": "../app-security/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
     { "path": "../react-router/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" }
