--- a/packages/app-i18n/package.json
+++ b/packages/app-i18n/package.json
@@ -33,8 +33,9 @@
     "react-apollo": "^3.1.3",
     "react-helmet": "^5.2.0",
     "react-hotkeyz": "^1.0.4",
-    "slate": "^0.58.1",
-    "slate-react": "^0.58.2"
+    "slate": "0.58.1",
+    "slate-react": "0.58.2",
+    "slate-history": "0.58.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
