--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -60,10 +60,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-loading-skeleton": "^0.5.0",
     "react-spinner-material": "1.1.4",
-    "react-transition-group": "^4.3.0",
-    "slate": "^0.58.1",
-    "slate-history": "^0.58.1",
-    "slate-react": "^0.58.1"
+    "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
