fix: add typings for old version of slate

--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -58,8 +58,8 @@
     "redux": "^4.0.0",
     "redux-undo": "^1.0.0-beta9-9-7",
     "shortid": "^2.2.8",
-    "slate": "^0.42.2",
-    "slate-react": "^0.19.3",
+    "slate": "0.42.6",
+    "slate-react": "0.19.8",
     "slugify": "^1.2.9",
     "store": "^2.0.12",
     "timeago-react": "^2.0.0",
