--- a/packages/app-admin/package.json
+++ b/packages/app-admin/package.json
@@ -19,6 +19,7 @@
     "@webiny/plugins": "^4.0.0-beta.7",
     "@webiny/react-router": "^4.0.0-beta.7",
     "@webiny/ui": "^4.0.0-beta.7",
+    "@webiny/app-security": "^4.0.0-beta.7",
     "apollo-client": "^2.6.8",
     "bytes": "^3.1.0",
     "classnames": "^2.2.6",
