--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "webiny-versions": "node ./scripts/webinyVersions.js",
     "lint-staged": "lint-staged",
     "postinstall": "node ./scripts/linkPackages.js",
+    "prepublishOnly": "node scripts/prepublishOnly.js",
     "prettier": "prettier --config .prettierrc.js --write",
     "setup-repo": "node scripts/setupRepo",
     "test": "jest --config jest.config.js",
