ci: remove prepublishOnly script from packages

--- a/packages/serverless-files/package.json
+++ b/packages/serverless-files/package.json
@@ -18,8 +18,7 @@
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
     "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
-    "deploy": "cd test && sls --debug",
-    "prepublishOnly": "yarn build"
+    "deploy": "cd test && sls --debug"
   },
   "publishConfig": {
     "access": "public",
