--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -100,8 +100,7 @@
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\" --watch",
     "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -c .storybook -o ${OUT:-.out}",
-    "prepublishOnly": "yarn build"
+    "build-storybook": "build-storybook -c .storybook -o ${OUT:-.out}"
   },
   "jest": {
     "transform": {
