--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
   },
   "scripts": {
     "eslint": "eslint \"packages/**/*.{ts,tsx}\" --quiet",
-    "build": "lerna run build --stream",
+    "build": "node scripts/buildProject.js",
     "build:components": "lerna run build --scope=@webiny/serverless-* --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
     "build:app-templates": "lerna run build --scope=@webiny/app-template* --stream",
