--- a/packages/app-admin/package.json
+++ b/packages/app-admin/package.json
@@ -19,6 +19,7 @@
     "@webiny/plugins": "^4.0.0-beta.10",
     "@webiny/react-router": "^4.0.0-beta.10",
     "@webiny/ui": "^4.0.0-beta.10",
+    "@webiny/app-security": "^4.0.0-beta.10",
     "apollo-client": "^2.6.8",
     "bytes": "^3.1.0",
     "classnames": "^2.2.6",
@@ -34,6 +35,7 @@
     "mime": "^2.4.2",
     "react-apollo": "^3.1.3",
     "react-butterfiles": "^1.3.1",
+    "react-helmet": "^5.2.0",
     "react-hotkeyz": "^1.0.4",
     "react-lazy-load": "^3.0.13",
     "react-transition-group": "^4.3.0",
