--- a/packages/app-headless-cms/tsconfig.build.json
+++ b/packages/app-headless-cms/tsconfig.build.json
@@ -6,6 +6,7 @@
     "dist",
     "../app",
     "../app-admin",
+    "../app-plugin-admin-welcome-screen",
     "../app-i18n",
     "../app-template",
     "../form",
@@ -19,6 +20,7 @@
   "references": [
     { "path": "../app/tsconfig.build.json" },
     { "path": "../app-admin/tsconfig.build.json" },
+    { "path": "../app-plugin-admin-welcome-screen/tsconfig.build.json" },
     { "path": "../app-i18n/tsconfig.build.json" },
     { "path": "../app-template/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
