--- a/packages/app-headless-cms/tsconfig.json
+++ b/packages/app-headless-cms/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "../app" },
     { "path": "../app-admin" },
+    { "path": "../app-plugin-admin-welcome-screen" },
     { "path": "../app-i18n" },
     { "path": "../app-template" },
     { "path": "../form" },
