--- a/packages/app-template-admin/tsconfig.build.json
+++ b/packages/app-template-admin/tsconfig.build.json
@@ -8,6 +8,7 @@
     "../app-admin",
     "../app-i18n",
     "../app-security",
+    "../app-plugin-admin-welcome-screen",
     "../app-plugin-security-cognito",
     "../app-plugin-security-cognito-theme",
     "../app-template ",
@@ -23,6 +24,7 @@
     { "path": "../app-admin/tsconfig.build.json" },
     { "path": "../app-i18n/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
+    { "path": "../app-plugin-admin-welcome-screen/tsconfig.build.json" },
     { "path": "../app-plugin-security-cognito/tsconfig.build.json" },
     { "path": "../app-plugin-security-cognito-theme/tsconfig.build.json" },
     { "path": "../app-template/tsconfig.build.json" },
