--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -80,6 +80,7 @@
     "babel-plugin-named-asset-import": "^1.0.0-next.3e165448"
   },
   "peerDependencies": {
+    "@webiny/app-plugins-admin-welcome-screen": "^4.0.0-beta.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
