--- a/packages/app-template-admin/package.json
+++ b/packages/app-template-admin/package.json
@@ -20,6 +20,7 @@
     "@webiny/app": "^4.0.0-beta.12",
     "@webiny/app-admin": "^4.0.0-beta.12",
     "@webiny/app-i18n": "^4.0.0-beta.12",
+    "@webiny/app-plugin-admin-welcome-screen": "^4.0.0-beta.12",
     "@webiny/app-plugin-security-cognito": "^4.0.0-beta.12",
     "@webiny/app-plugin-security-cognito-theme": "^4.0.0-beta.12",
     "@webiny/app-security": "^4.0.0-beta.12",
