--- a/packages/app-plugin-admin-welcome-screen/package.json
+++ b/packages/app-plugin-admin-welcome-screen/package.json
@@ -17,7 +17,7 @@
     "@webiny/app-admin": "^4.0.0-beta.13",
     "@webiny/app-security": "^4.0.0-beta.13",
     "@webiny/plugins": "^4.0.0-beta.13",
-    "@webiny/react-router": "^2.0.2",
+    "@webiny/react-router": "^4.0.0-beta.13",
     "@webiny/ui": "^4.0.0-beta.13",
     "emotion": "^10.0.27",
     "react-helmet": "^6.0.0"
