chore: update contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -176,6 +176,13 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/8401511?v=4",
       "profile": "https://github.com/boyuan459",
       "contributions": []
+    },
+    {
+      "login": "asashay",
+      "name": "Alex Oliynyk",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/10714670?v=4",
+      "profile": "https://github.com/asashay",
+      "contributions": []
     }
   ],
   "contributorsPerLine": 6,
