--- a/packages/serverless-aws-lambda/package.json
+++ b/packages/serverless-aws-lambda/package.json
@@ -14,10 +14,10 @@
   ],
   "license": "Apache",
   "dependencies": {
-    "@serverless/aws-iam-role": "^1.0.0",
     "@serverless/core": "^1.0.0",
     "@webiny/serverless-aws-s3": "^4.0.2",
     "@webiny/serverless-component": "^4.0.2",
+    "@webiny/serverless-aws-iam-role": "^4.0.2",
     "archiver": "^3.0.0",
     "aws-sdk": "^2.474.0",
     "fs-extra": "^7.0.0",
