--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -181,7 +181,14 @@
       "login": "asashay",
       "name": "Alex Oliynyk",
       "avatar_url": "https://avatars2.githubusercontent.com/u/10714670?v=4",
-      "profile": "https://github.com/asashay",
+      "profile": "http://alexoliynyk.me/",
+      "contributions": []
+    },
+    {
+      "login": "icy-meteor",
+      "name": "Rahul Suresh",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/22114682?v=4",
+      "profile": "https://www.linkedin.com/in/rahulsuresh98/",
       "contributions": []
     }
   ],
