--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -51,6 +51,8 @@
       "@webiny/app-typeform": ["./packages/app-typeform/src"],
       "@webiny/app-mailchimp/*": ["./packages/app-mailchimp/src/*"],
       "@webiny/app-mailchimp": ["./packages/app-mailchimp/src"],
+      "@webiny/app-file-manager/*": ["./packages/app-file-manager/src/*"],
+      "@webiny/app-file-manager": ["./packages/app-file-manager/src"],
       "@webiny/app-form-builder": ["./packages/app-form-builder/src"],
       "@webiny/app-form-builder/*": ["./packages/app-form-builder/src/*"],
       "@webiny/app-form-builder-theme": ["./packages/app-form-builder-theme/src"],
