Small refactoring changes based off PR reviews; Refactored app-file-manager structure; Add to contrib

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -190,6 +190,13 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/22114682?v=4",
       "profile": "https://www.linkedin.com/in/rahulsuresh98/",
       "contributions": []
+    },
+    {
+      "login": "jmrapp1",
+      "name": "Jon Rapp",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/376226?v=4",
+      "profile": "https://github.com/jmrapp1",
+      "contributions": []
     }
   ],
   "contributorsPerLine": 6,
