--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "adio": "^1.0.1",
-    "all-contributors-cli": "^6.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0-beta.3",
     "babel-jest": "^24.9.0",
     "bufferutil": "^4.0.1",
     "chalk": "^2.4.1",
     "commitizen": "^2.10.1",
+    "contreebutors": "^1.1.3",
     "cross-env": "^5.2.0",
     "cypress": "^4.4.0",
     "cz-customizable": "^5.2.0",
@@ -125,8 +125,8 @@
     "watch:api": "lerna run watch --scope=@webiny/api* --stream --parallel",
     "watch:packages": "lerna run watch --scope=@webiny/* --ignore=@webiny/serv* --stream --parallel",
     "clear-dist": "yarn rimraf packages/*/dist",
-    "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate",
+    "contributors:add": "contreebutors add --username",
+    "contributors:generate": "contreebutors render",
     "commit": "node ./scripts/commitizen.js",
     "commit:no-verify": "yarn commit --no-verify",
     "commit:verify": "yarn lint-staged",
