chore: add "wip" to commitlint types and commitizen adapter

--- a/package.json
+++ b/package.json
@@ -168,6 +168,22 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
+    ],
+    "rules": {
+      "type-enum": [
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "test",
+        "build",
+        "ci",
+        "chore",
+        "revert",
+        "merge",
+        "wip"
+      ]
+    }
   }
 }
