--- a/packages/cwp-template-cms/template/tsconfig.build.json
+++ b/packages/cwp-template-cms/template/tsconfig.build.json
@@ -15,7 +15,7 @@
     "emitDeclarationOnly": true,
     "baseUrl": ".",
     "paths": {},
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types", "./types"]
   },
   "exclude": [
     "node_modules",
