--- a/package.json
+++ b/package.json
@@ -171,18 +171,22 @@
     ],
     "rules": {
       "type-enum": [
-        "feat",
-        "fix",
-        "docs",
-        "style",
-        "refactor",
-        "test",
-        "build",
-        "ci",
-        "chore",
-        "revert",
-        "merge",
-        "wip"
+        2,
+        "always",
+        [
+          "feat",
+          "fix",
+          "docs",
+          "style",
+          "refactor",
+          "test",
+          "build",
+          "ci",
+          "chore",
+          "revert",
+          "merge",
+          "wip"
+        ]
       ]
     }
   }
