--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: webiny/action-conventional-commits@v1.0.1
+
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '12'
