--- a/packages/app-form-builder/package.json
+++ b/packages/app-form-builder/package.json
@@ -44,8 +44,7 @@
     "react-router": "^5.1.2",
     "react-sortable-hoc": "^1.9.1",
     "shortid": "^2.2.14",
-    "timeago-react": "^2.0.0",
-    "use-react-router": "^1.0.7"
+    "timeago-react": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
