--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime": "^7.5.5",
     "@webiny/i18n": "^4.0.2",
     "@webiny/i18n-react": "^4.0.2",
+    "@webiny/react-router": "^4.0.2",
     "@webiny/plugins": "^4.0.2",
     "@webiny/ui": "^4.0.2",
     "apollo-client": "^2.6.8",
@@ -29,7 +30,6 @@
     "react": "^16.8.6",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.6.0",
-    "use-react-router": "^1.0.7",
     "warning": "^4.0.2"
   },
   "devDependencies": {
