chore: add "develop" branch

--- a/lerna.json
+++ b/lerna.json
@@ -17,6 +17,7 @@
       "allowBranch": [
         "master",
         "next",
+        "develop",
         "release-*"
       ],
       "conventionalCommits": true,
