--- a/packages/cwp-template-full/template/apps/admin/package.json
+++ b/packages/cwp-template-full/template/apps/admin/package.json
@@ -11,9 +11,9 @@
     "env-cmd": "^10.1.0"
   },
   "scripts": {
-    "start": "env-cmd -r .env.json -e default,local webiny run start",
-    "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
-    "build:prod": "env-cmd -r .env.json -e default,prod webiny run build"
+    "start": "env-cmd -r .env.json -e default webiny run start --env=local --stack=api",
+    "build:dev": "env-cmd -r .env.json -e default webiny run build --env=dev --stack=api",
+    "build:prod": "env-cmd -r .env.json -e default webiny run build --env=prod --stack=api"
   },
   "browserslist": {
     "development": [
