--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -13,7 +13,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.5.5"
+    "@babel/runtime": "^7.5.5",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
