--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -145,6 +145,7 @@
     "./packages/serverless-aws-s3-object",
     "./packages/serverless-component",
     "./packages/serverless-function",
-    "**resources.js"
+    "**resources.js",
+    "./sample-project/webiny.root.js"
   ]
 }
