--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@types/react-router-dom": "^5.1.5",
     "@webiny/plugins": "^4.1.0",
     "apollo-client": "^2.6.8",
     "react-apollo": "^3.1.3",
@@ -24,8 +25,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@types/react-router-dom": "^5.1.3"
+    "@babel/preset-env": "^7.5.5"
   },
   "peerDependencies": {
     "react": "^16.8.0"
