--- a/packages/serverless-aws-s3/package.json
+++ b/packages/serverless-aws-s3/package.json
@@ -16,6 +16,7 @@
     "@webiny/serverless-component": "^4.1.0",
     "archiver": "^3.0.0",
     "aws-sdk": "^2.488.0",
+    "chalk": "^4.1.0",
     "fs-extra": "^7.0.0",
     "klaw-sync": "^6.0.0",
     "mime-types": "^2.1.22",
