--- a/packages/app-plugin-admin-welcome-screen/tsconfig.build.json
+++ b/packages/app-plugin-admin-welcome-screen/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules","../app-admin", "../app-security", "../plugins", "../ui"],
+  "exclude": ["node_modules", "../app-admin", "../app-security", "../plugins", "../react-router", "../ui"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -11,6 +11,7 @@
     { "path": "../app-admin/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
+    { "path": "../react-router/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" }
   ]
 }
