--- a/packages/app-plugin-admin-welcome-screen/tsconfig.json
+++ b/packages/app-plugin-admin-welcome-screen/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../app-admin" },
     { "path": "../app-security" },
     { "path": "../plugins" },
+    { "path": "../react-router" },
     { "path": "../ui" }
   ]
 }
