chore(react-router): format code

--- a/packages/react-router/tsconfig.json
+++ b/packages/react-router/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "extends": "../../tsconfig",
   "exclude": ["node_modules", "./dist", "../plugins"],
-  "references": [
-    { "path": "../plugins" }
-  ]
+  "references": [{ "path": "../plugins" }]
 }
