--- a/packages/app-typeform/package.json
+++ b/packages/app-typeform/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@webiny/app": "^4.1.0",
     "@emotion/styled": "^10.0.17",
     "@webiny/app-page-builder": "^4.2.0",
     "@webiny/ui": "^4.2.0",
