--- a/.github/workflows/releaseBranchPush.yml
+++ b/.github/workflows/releaseBranchPush.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
 
       - uses: actions/setup-node@v2-beta
         with:
