--- a/packages/app-template/package.json
+++ b/packages/app-template/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/app": "^4.1.1-beta.0",
+    "@webiny/react-router": "^4.1.1-beta.0",
     "@webiny/plugins": "^4.1.1-beta.0"
   },
   "devDependencies": {
