--- a/packages/app-template/tsconfig.build.json
+++ b/packages/app-template/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist", "../plugins", "../app"],
+  "exclude": ["node_modules", "./dist", "../plugins", "../react-router", "../app"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -9,6 +9,7 @@
   },
   "references": [
     { "path": "../app/tsconfig.build.json" },
+    { "path": "../react-router/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" }
   ]
 }
