--- a/.github/workflows/releaseLatest.yml
+++ b/.github/workflows/releaseLatest.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          ref: release-4.2.0
+          ref: ${{ github.event.client_payload.branch }}
           fetch-depth: 0
 
       - uses: actions/setup-node@v2-beta
