--- a/packages/cwp-template-full/package.json
+++ b/packages/cwp-template-full/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chalk": "^4.0.0",
+    "execa": "^4.0.0",
     "fs-extra": "^9.0.0",
     "load-json-file": "^6.2.0",
     "uuid": "^7.0.3",
