chore(api-security): update tsconfig.json

--- a/packages/api-security/tsconfig.json
+++ b/packages/api-security/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "../graphql" },
     { "path": "../commodo-graphql" },
-    { "path": "../validation" }
+    { "path": "../validation" },
+    { "path": "../api-headless-cms" }
   ]
 }
