--- a/packages/create-webiny-project/package.json
+++ b/packages/create-webiny-project/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^2.6.0",
     "os": "^0.1.1",
     "p-retry": "^4.2.0",
+    "rimraf": "^3.0.2",
     "semver": "^7.3.2",
     "uniqid": "^5.2.0",
     "uuid": "^8.1.0",
