--- a/packages/app-headless-cms/package.json
+++ b/packages/app-headless-cms/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
