--- a/packages/app-template/tsconfig.json
+++ b/packages/app-template/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig",
   "references": [
     { "path": "../app" },
-    { "path": "../react-router" }
+    { "path": "../react-router" },
     { "path": "../plugins" }
   ]
 }
