--- a/packages/tracking/package.json
+++ b/packages/tracking/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "load-json-file": "^6.2.0",
     "lodash.get": "^4.4.0",
+    "posthog-node": "^1.0.3",
     "request": "^2.88.0"
   },
   "publishConfig": {
