--- a/packages/app-template-admin/tsconfig.build.json
+++ b/packages/app-template-admin/tsconfig.build.json
@@ -7,13 +7,14 @@
     "../app",
     "../app-admin",
     "../app-i18n",
+    "../app-file-manager",
     "../app-security",
     "../app-plugin-admin-welcome-screen",
     "../app-plugin-security-cognito",
     "../app-plugin-security-cognito-theme",
     "../app-template",
-    "../ui",
-    "../app-file-manager"
+    "../react-router",
+    "../ui"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -24,12 +25,13 @@
     { "path": "../app/tsconfig.build.json" },
     { "path": "../app-admin/tsconfig.build.json" },
     { "path": "../app-i18n/tsconfig.build.json" },
+    { "path": "../app-file-manager/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
     { "path": "../app-plugin-admin-welcome-screen/tsconfig.build.json" },
     { "path": "../app-plugin-security-cognito/tsconfig.build.json" },
     { "path": "../app-plugin-security-cognito-theme/tsconfig.build.json" },
     { "path": "../app-template/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" },
-    { "path": "../app-file-manager/tsconfig.build.json" }
+    { "path": "../react-router/tsconfig.build.json" },
+    { "path": "../ui/tsconfig.build.json" }
   ]
 }
