wip(headless): fix cyclical dependency for app-admin

--- a/packages/app-admin/tsconfig.json
+++ b/packages/app-admin/tsconfig.json
@@ -6,7 +6,6 @@
     { "path": "../app" },
     { "path": "../plugins" },
     { "path": "../react-router" },
-    { "path": "../form" },
-    { "path": "../app-headless-cms" }
+    { "path": "../form" }
   ]
 }
