--- a/packages/api-plugin-commodo-nedb/package.json
+++ b/packages/api-plugin-commodo-nedb/package.json
@@ -14,13 +14,13 @@
 		"Adrian Smijulj <adrian@webiny.com>"
 	],
 	"dependencies": {
-		"@babel/runtime": "^7.5.5"
+		"@babel/runtime": "^7.5.5",
+		"@commodo/fields-storage-nedb": "^2.0.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.5",
 		"@babel/core": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
-		"@commodo/fields-storage-nedb": "^2.0.0-next.16",
 		"@webiny/graphql": "^4.3.0"
 	},
 	"publishConfig": {
