--- a/packages/cli-plugin-scaffold-graphql-service/template/package.json
+++ b/packages/cli-plugin-scaffold-graphql-service/template/package.json
@@ -7,6 +7,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
+    "@webiny/validation": "^4.3.0",
     "@webiny/handler": "^4.0.2",
     "@webiny/handler-apollo-server": "^4.0.2",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.2",
