--- a/packages/tracking/package.json
+++ b/packages/tracking/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "form-data": "^3.0.0",
     "load-json-file": "^6.2.0",
-    "posthog-node": "^1.0.3"
+    "node-fetch": "^2.6.0"
   },
   "publishConfig": {
     "access": "public",
