--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Check formatting
-        run: npx prettier --check "packages/**/src/*.{js,ts}"
+        run: npx prettier --check "packages/**/src/**/*.{js,ts}"
 
   build-test:
     name: Build and test
