--- a/.github/workflows/releaseBeta.yml
+++ b/.github/workflows/releaseBeta.yml
@@ -32,7 +32,7 @@ jobs:
         run: yarn adio
 
       - name: Check code formatting
-        run: yarn prettier:check"
+        run: yarn prettier:check
 
       - name: Build packages
         run: yarn build
