--- a/packages/api-security/package.json
+++ b/packages/api-security/package.json
@@ -23,7 +23,8 @@
     "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.4",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
