--- a/packages/cli-plugin-scaffold-react-package/package.json
+++ b/packages/cli-plugin-scaffold-react-package/package.json
@@ -15,16 +15,9 @@
   },
   "homepage": "https://github.com/webiny/webiny-js#readme",
   "dependencies": {
-    "case": "^1.6.3",
-    "execa": "^4.0.2",
     "find-up": "^4.1.0",
-    "load-json-file": "^6.2.0",
-    "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
-    "ncp": "^2.0.0",
-    "pluralize": "^8.0.0",
-    "replace-in-path": "^1.0.2",
-    "write-json-file": "^4.3.0"
+    "ncp": "^2.0.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5"
