--- a/apps/cmsOnly/package.json
+++ b/apps/cmsOnly/package.json
@@ -14,9 +14,9 @@
     "@webiny/project-utils": "^4.0.0-beta.0"
   },
   "scripts": {
-    "start": "env-cmd -r .env.json -e default,local webiny run start",
-    "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
-    "build:prod": "env-cmd -r .env.json -e default,prod webiny run build"
+    "start": "env-cmd -r --silent .env.json -e default,local webiny run start",
+    "build:dev": "env-cmd -r --silent .env.json -e default,dev webiny run build",
+    "build:prod": "env-cmd -r --silent .env.json -e default,prod webiny run build"
   },
   "browserslist": {
     "development": [
