--- a/apps/future/secure-site/package.json
+++ b/apps/future/secure-site/package.json
@@ -49,14 +49,14 @@
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
     "build": "rescripts build",
-    "build:dev": "cross-env REACT_APP_ENV=browser env-cmd -r --silent .env.json -e default,dev yarn build && yarn build:dev:ssr",
-    "build:dev:ssr": "cross-env NODE_ENV=production REACT_APP_ENV=ssr env-cmd -r --silent .env.json -e default,dev yarn build:ssr",
-    "build:prod": "cross-env REACT_APP_ENV=browser env-cmd -r --silent .env.json -e default,prod yarn build && yarn build:prod:ssr",
-    "build:prod:ssr": "cross-env NODE_ENV=production REACT_APP_ENV=ssr env-cmd -r --silent .env.json -e default,prod yarn build:ssr",
+    "build:dev": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json --silent -e default,dev yarn build && yarn build:dev:ssr",
+    "build:dev:ssr": "cross-env NODE_ENV=production REACT_APP_ENV=ssr env-cmd -r .env.json --silent -e default,dev yarn build:ssr",
+    "build:prod": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json --silent -e default,prod yarn build && yarn build:prod:ssr",
+    "build:prod:ssr": "cross-env NODE_ENV=production REACT_APP_ENV=ssr env-cmd -r .env.json --silent -e default,prod yarn build:ssr",
     "build:ssr": "webpack --progress --mode production --config ./ssr/webpack.config.js && cp ./ssr/handler.js build-ssr/",
     "build:handler": "webpack --config ./handler/webpack.config.js",
     "postbuild": "yarn build:handler",
-    "start": "env-cmd -r --silent .env.json -e default,local rescripts start",
+    "start": "env-cmd -r .env.json --silent -e default,local rescripts start",
     "test": "rescripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
